# analysis_tools_ir

./: .gitmodules  README.md  requirements.txt  setup.cfg  setup.py
analysis_tools_ir/evaluate/: wrapper.py
docs/: analysis_tools_ir.html  index.html  search.js
docs/analysis_tools_ir/: evaluate.html  sigtests.html  tables.html  utils.html
docs/analysis_tools_ir/evaluate/: parser.html
docs/analysis_tools_ir/sigtests/: ind.html  paired.html  utils.html
docs/analysis_tools_ir/tables/: convert_to_latex_format.html
docs/analysis_tools_ir/utils/: cache.html  dummyfile.html  formatter.html
sigtests/: ind.py  paired.py  utils.py
src/analysis_tools_ir/: requirements.txt
src/analysis_tools_ir.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/analysis_tools_ir/evaluate/: parser.py
src/analysis_tools_ir/graphs/: __init__.py  distribution.py  liveplot.py
src/analysis_tools_ir/sigtests/: __init__.py  ind.py  paired.py  utils.py
src/analysis_tools_ir/utils/: __init__.py  cache.py  dummyfile.py  formatter.py
trec_wrapper/: __init__.py  wrapper.py
