[metadata]
name = analysis-tools-ir 
version = 0.0.2
author = Ayuei 
description = Common analysis tools for IR
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.10


[options.packages.find]
where = src
